--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>    
             <!--GStack-->
             <div class="topnav">
-                <a href="https://www.rockymountainoils.com/"><img class="gien" style="display: flex; justify-content: left; height: 60px;" src="https://www.rockymountainoils.com/cdn/shop/t/260/assets/rmo-logo.svg?v=119252189530219791611737037455"></a>
+                <a href="https://www.rockymountainoils.com/"><img class="gien" style="display: flex; justify-content: left; height: 60px;" src="https://www.rockymountainoils.com/cdn/shop/t/291/assets/rmo-logo.svg?v=119252189530219791611742242289"></a>
                 <div class="topnav-right">
                     <a class="active" href="https://www.rockymountainoils.com/">Main</a>
                     <a href="https://maps.app.goo.gl/KbNBUJLfhy4MFfgZ8">Maps</a>
@@ -183,10 +183,11 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <h2>Cloudstack Links</h2>
+                <a target="_bLank" href="https://cloudstack-cell.github.io/Is-Peppermint-Essential-Oil-Safe-for-Cats-Unraveling-the-Truth/">https://cloudstack-cell.github.io/Is-Peppermint-Essential-Oil-Safe-for-Cats-Unraveling-the-Truth/</a><br>
+                <a target="_bLank" href="https://rockymountainoils.s3.us-east-005.backblazeb2.com/Is+Peppermint+Essential+Oil+Safe+for+Cats%3F+Unraveling+the+Truth/index.html">https://rockymountainoils.s3.us-east-005.backblazeb2.com/Is+Peppermint+Essential+Oil+Safe+for+Cats%3F+Unraveling+the+Truth/index.html</a><br>
+                <a target="_bLank" href="https://is-peppermint-essential-git-5ecb4c-champions-projects-00b16d5b.vercel.app/">https://is-peppermint-essential-git-5ecb4c-champions-projects-00b16d5b.vercel.app/</a><br>
+                <a target="_bLank" href="https://melodic-kataifi-91b22b.netlify.app/">https://melodic-kataifi-91b22b.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
